# ROS-Final-Project-2023

mobile_manipulator/: README.md  navigate.py
mobile_manipulator/mobile_manipulator_description/: CMakeLists.txt  package.xml
mobile_manipulator/mobile_manipulator_description/urdf/: mobile_manipulator.xacro  niryo_one.urdf.xacro  niryo_one_camera.urdf.xacro  niryo_one_gazebo.urdf.xacro
mobile_manipulator/mobile_manipulator_moveit/: .setup_assistant  CMakeLists.txt  package.xml
mobile_manipulator/mobile_manipulator_moveit/config/: fake_controllers.yaml  gazebo_scout_v2.urdf  joint_limits.yaml  ompl_planning.yaml  scout_v2.srdf  stomp_planning.yaml
mobile_manipulator/mobile_manipulator_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
niryo_arm/: README.md  script_example.py
niryo_arm/niryo_moveit/: .setup_assistant  CMakeLists.txt  package.xml
niryo_arm/niryo_moveit/config/: fake_controllers.yaml  gazebo_niryo_one.urdf  kinematics.yaml  niryo_one.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
niryo_arm/niryo_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
niryo_arm/niryo_robot_description/launch/: display.launch
niryo_arm/niryo_robot_description/urdf/one/: niryo.urdf
scout_v2/: README.md  script_example.py
scout_v2/scout_control/: CMakeLists.txt  package.xml  setup.py
scout_v2/scout_control/config/: control.yaml  gazebo_interface.yaml  twist_mux.yaml
scout_v2/scout_control/launch/: control.launch  control_mobile.launch  teleop_keyboard.launch
scout_v2/scout_control/node/: key_scout_teleop
scout_v2/scout_description/: package.xml
scout_v2/scout_description/launch/: description.launch
scout_v2/scout_description/urdf/: scout_v2.gazebo  scout_v2.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
scout_v2/scout_gazebo/: CMakeLists.txt  package.xml
scout_v2/scout_gazebo/launch/: moving_actor.launch  playpen.launch  scout_cave_world.launch  scout_empty_world.launch  scout_moving_actor.launch  scout_playpen.launch  scout_warehouse.launch  spawn_scout.launch  warehouse.launch
scout_v2/scout_gazebo/worlds/: moving_actor.world
scout_v2/scout_navigation/: package.xml
scout_v2/scout_navigation/config/: planner_teb.yaml
scout_v2/scout_navigation/launch/: amcl_demo.launch  exploration_demo.launch  gmapping_demo.launch  move_base.launch  move_base_mapless_demo.launch
scout_v2/scout_navigation/maps/: playpen.pgm.yaml  playpen.yaml
scout_v2/scout_viz/: CMakeLists.txt  package.xml
scout_v2/scout_viz/launch/: view_mm_robot.launch  view_robot.launch
scout_v2/scout_viz/rviz/: mm_robot.rviz  robot.rviz
