<?xml version="1.0"?>
<package format="2">
  <name>scout_control</name>
  <version>0.0.0</version>
  <description>The scout_control package</description>

  <author email="kim87@kimm.re.kr">Sanghyun Kim</author>
  <maintainer email="kim87@kimm.re.kr">Sanghyun Kim</maintainer>


  <license>TODO</license>

  <depend>rospy</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>geometry_msgs</depend>

  <exec_depend>husky_description</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <!-- <exec_depend>multimaster_launch</exec_depend> -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
