<?xml version="1.0"?>
<package format="2">
  <name>scout_gazebo</name>
  <version>0.6.0</version>
  <description>Gazebo Simulator bringup</description>

  <author email="kim87@kimm.re.kr">Sanghyun Kim</author>

  <maintainer email="kim87@kimm.re.kr">Sanghyun Kim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>scout_control</exec_depend>
  <exec_depend>scout_description</exec_depend>

  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>
  
  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
