<?xml version="1.0"?>
<package>
  <name>scout_navigation</name>
  <version>0.6.0</version>
  <description>Autonomous mapping and navigation demos for the Scout</description>

  <author email="kim87@kimm.re.kr">Sanghyun Kim</author>
  <maintainer email="kim87@kimm.re.kr">Sanghyun Kim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <!-- Disabling till package is released -->
  <!-- <run_depend>frontier_exploration</run_depend> -->
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
